Added UI representations of the new balls and significant points features

--- a/Styles/TennisKata.css
+++ b/Styles/TennisKata.css
@@ -56,3 +56,9 @@ button {
 #player1Serving, #player2Serving {
     display: none;
 }
+
+.significantPoint {
+    background-color: purple;
+    color: white;
+    padding: 5px;
+}
